--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -198,7 +198,8 @@
 scores = {
   ob1 = "Oboe I",
   ob2 = "Oboe II",
-  ottoni = "Clarino I, II in C",
+  trb1 = "Trombone I",
+  trb2 = "Trombone II",
   vl1 = "Violino I",
   vl2 = "Violino II",
   vla = "Viola",
@@ -238,7 +239,7 @@ end
 \lastname{Gassmann}
 \title{Requiem}
 \subtitle{KosG 6\\(F-Pn D-4346)}
-\scoring{S, A, T, B (solo), S, A, T, B (coro), 2 ob, 2 clno (C), 2 vl, vla, b, org}
+\scoring{S, A, T, B (solo), S, A, T, B (coro), 2 ob, 2 trb, 2 vl, vla, b, org}
 \maketitle
 
 
@@ -262,7 +263,7 @@ Front matter typeset with Source Sans Pro and Fredericka the Great.
 
 This edition bases upon a copy in the Bibliothèque nationale de France. The digital version of the manuscript is available at \url{https://gallica.bnf.fr/ark:/12148/btv1b525136899/} (siglum D-4346; see also RISM ID 840016334).
 
-In general, this edition closely follows the manuscript. Any changes that were introduced by the editor are indicated by italic type (lyrics, dynamics and directions), parentheses (expressive marks and bass figures) or dashes (slurs and ties). Accidentals are used according to modern conventions. Asterisks denote changes that are clarified in the detailed remarks below.\footnote{Abbreviations: A, alto; B, bass; b, basses; clno, clarion; Ms, manuscript; ob, oboe; org, organ; r, rest; S, soprano; T,~tenor; vl, violin; vla, viola.}
+In general, this edition closely follows the manuscript. Any changes that were introduced by the editor are indicated by italic type (lyrics, dynamics and directions), parentheses (expressive marks and bass figures) or dashes (slurs and ties). Accidentals are used according to modern conventions. Asterisks denote changes that are clarified in the detailed remarks below.\footnote{Abbreviations: A, alto; B, bass; b, basses; Ms, manuscript; ob, oboe; org, organ; r, rest; S, soprano; T, tenor; trb, trombone; vl, violin; vla, viola.}
 
 \bigskip
 
@@ -270,7 +271,10 @@ In general, this edition closely follows the manuscript. Any changes that were i
   \toprule
   \itshape Mov. & \itshape Bar & \itshape Staff & \itshape Note \\
   \midrule \endhead
-
+  1 & 39    & vl 2     & 4th quarter in Ms: as′8–g′8 \\
+    & 51    & S        & 5th eighth in Ms: b′16–a′16 \\
+    & 56    & trb 2, T & 3rd eighth in Ms: d′8 \\
+    & 60–62 & trb 1    & bars in Ms: es′4–d′4–c′4–r4, r2–r4–bes′4, and as′2.–g′8–f′8 \\
   \bottomrule
 \end{longtable}
 
