--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -275,6 +275,10 @@ In general, this edition closely follows the manuscript. Any changes that were i
     & 51    & S        & 5th eighth in Ms: b′16–a′16 \\
     & 56    & trb 2, T & 3rd eighth in Ms: d′8 \\
     & 60–62 & trb 1    & bars in Ms: es′4–d′4–c′4–r4, r2–r4–bes′4, and as′2.–g′8–f′8 \\
+    & 91    & vl 1     & 5th eighth in Ms: f′8 \\
+    & 91    & org      & bar in Ms: G2–As4 \\
+    & 114   & A        & 2nd/3rd quarter in Ms: as′2 \\
+    & 122f  & vla      & 5 x es′8 in Ms \\
   \bottomrule
 \end{longtable}
 
