--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -279,6 +279,11 @@ In general, this edition closely follows the manuscript. Any changes that were i
     & 91    & org      & bar in Ms: G2–As4 \\
     & 114   & A        & 2nd/3rd quarter in Ms: as′2 \\
     & 122f  & vla      & 5 x es′8 in Ms \\
+  2 & 7     & trb 2    & 1st note in Ms: c′2 \\
+    & 8     & ob 2     & bar in Ms: g′2. \\
+    & 36    & A        & 4th sixteenth in Ms: f′16 \\
+    & 56    & vla      & bar in Ms: 12 sixteenth \\
+    & 62    & B        & 4th sixteenth in Ms: c16 \\
   \bottomrule
 \end{longtable}
 
