--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -284,6 +284,10 @@ In general, this edition closely follows the manuscript. Any changes that were i
     & 36    & A        & 4th sixteenth in Ms: f′16 \\
     & 56    & vla      & bar in Ms: 12 sixteenth \\
     & 62    & B        & 4th sixteenth in Ms: c16 \\
+    & 75    & A        & 1st half note in Ms: f′2 \\
+    & 77    & vla      & 3rd eighth in Ms: d′8 \\
+    & 119   & vl 1     & 1st quarter in Ms: as′4 \\
+    & 140   & B        & bar in Ms: es1 \\
   \bottomrule
 \end{longtable}
 
