--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -288,6 +288,8 @@ In general, this edition closely follows the manuscript. Any changes that were i
     & 77    & vla      & 3rd eighth in Ms: d′8 \\
     & 119   & vl 1     & 1st quarter in Ms: as′4 \\
     & 140   & B        & bar in Ms: es1 \\
+    & 170   & vl 2     & 4th quarter in Ms: f′16–f′16–f′16–f′16 \\
+    & 172   & trb 2    & 1st half of bar in Ms: d′2 \\
   \bottomrule
 \end{longtable}
 
