--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -290,6 +290,18 @@ In general, this edition closely follows the manuscript. Any changes that were i
     & 140   & B        & bar in Ms: es1 \\
     & 170   & vl 2     & 4th quarter in Ms: f′16–f′16–f′16–f′16 \\
     & 172   & trb 2    & 1st half of bar in Ms: d′2 \\
+    & 176ff & vl 1, 2, vla & In the following bars (measures), three equal sixteenths appear in the Ms: vl 1 – 199 (2nd and 3rd quarter), 219 (1st), 221 (1st), 231 (3rd), 243 (2nd), 250 (1st), and 252 (1st); vl 2 – 196 (3rd quarter), 199 (3rd), 219 (1st), 221 (1st), 231 (3rd), and 251 (1st); vla – 196 (3rd quarter), 250 (1st), and 252 (1st). \\
+    & 194   & org      & 1st eighth in Ms: es8 \\
+    & 195   & S        & last eighth in Ms: d″16–c″16 \\
+    & 200   & trb 1    & 4th quarter in Ms: f′4 \\
+    & 200   & A        & 3rd quarter in Ms: as′4 \\
+    & 200   & trb 2, T & 3rd quarter in Ms: f′4 \\
+    & 213   & vla      & 1st quarter in Ms: c′4 \\
+    & 232   & B        & 1st quarter in Ms: bes4 \\
+    & 242   & T        & 1st half of bar in Ms: bes4–b4 \\
+    & 263   & vla      & 1st sixteenth in Ms: r16 \\
+    & 266   & ob 1     & grace note missing in Ms \\
+    & 266   & A        & grace note missing in Ms \\
   \bottomrule
 \end{longtable}
 
