--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -302,6 +302,12 @@ In general, this edition closely follows the manuscript. Any changes that were i
     & 263   & vla      & 1st sixteenth in Ms: r16 \\
     & 266   & ob 1     & grace note missing in Ms \\
     & 266   & A        & grace note missing in Ms \\
+    & 308   & ob 1, 2, vl 1 & 1st half of bar in Ms: des″4–des″4 \\
+    & 361   & T        & 1st note in Ms: as2. \\
+    & 388f  & A        & bars in Ms: c′2–es′2 and es′2–es′2 \\
+    & 388   & trb 2 , T & 1st half note in Ms: f2 \\
+    & 390   & B        & 1st half note in Ms: es2 \\
+    & 391   & ob 1     & 1st half note in Ms: as′2 \\
   \bottomrule
 \end{longtable}
 
