--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -308,6 +308,11 @@ In general, this edition closely follows the manuscript. Any changes that were i
     & 388   & trb 2 , T & 1st half note in Ms: f2 \\
     & 390   & B        & 1st half note in Ms: es2 \\
     & 391   & ob 1     & 1st half note in Ms: as′2 \\
+    & 417   & ob 1, 2  & bar in Ms: d′4.–es′8–d′4–d′4 \\
+    & 437   & vla      & 1st half of bar in Ms: g4–g4 \\
+    & 498   & ob 1, 2, vl 1 & 1st quarter in Ms: b′8–a′8 \\
+    & 503   & trb 1    & 2nd quarter in Ms: es′4 \\
+    & 506   & vl 2     & 1st half of bar in Ms: as′4–as′4 \\
   \bottomrule
 \end{longtable}
 
