--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -239,7 +239,7 @@ end
 \lastname{Gassmann}
 \title{Requiem}
 \subtitle{KosG 6\\(F-Pn D-4346)}
-\scoring{S, A, T, B (solo), S, A, T, B (coro), 2 ob, 2 trb, 2 vl, vla, b, org}
+\scoring{S, A, T, B (coro), 2 ob, 2 trb, 2 vl, vla, b, org}
 \maketitle
 
 
@@ -254,7 +254,7 @@ end
 Music engraving by LilyPond 2.22.0 (\url{http://www.lilypond.org}).\\
 Front matter typeset with Source Sans Pro and Fredericka the Great.
 
-\textit{First version, August 2021}
+\textit{First version, September 2021}
 
 \vspace*{2cm}
 
@@ -263,7 +263,7 @@ Front matter typeset with Source Sans Pro and Fredericka the Great.
 
 This edition bases upon a copy in the Bibliothèque nationale de France. The digital version of the manuscript is available at \url{https://gallica.bnf.fr/ark:/12148/btv1b525136899/} (siglum D-4346; see also RISM ID 840016334).
 
-In general, this edition closely follows the manuscript. Any changes that were introduced by the editor are indicated by italic type (lyrics, dynamics and directions), parentheses (expressive marks and bass figures) or dashes (slurs and ties). Accidentals are used according to modern conventions. Asterisks denote changes that are clarified in the detailed remarks below.\footnote{Abbreviations: A, alto; B, bass; b, basses; Ms, manuscript; ob, oboe; org, organ; r, rest; S, soprano; T, tenor; trb, trombone; vl, violin; vla, viola.}
+In general, this edition closely follows the manuscript. Any changes that were introduced by the editor are indicated by italic type (lyrics, dynamics and directions), parentheses (expressive marks and bass figures) or dashes (slurs and ties). Accidentals are used according to modern conventions. Asterisks denote changes that are clarified in the detailed remarks below.\footnote{Abbreviations: A, alto; B, bass; b, basses; Ms, manuscript; ob, oboe; org, organ; r, rest; S, soprano; T, tenor; trb,~trombone; vl, violin; vla, viola.}
 
 \bigskip
 
@@ -279,6 +279,7 @@ In general, this edition closely follows the manuscript. Any changes that were i
     & 91    & org      & bar in Ms: G2–As4 \\
     & 114   & A        & 2nd/3rd quarter in Ms: as′2 \\
     & 122f  & vla      & 5 x es′8 in Ms \\
+  \midrule
   2 & 7     & trb 2    & 1st note in Ms: c′2 \\
     & 8     & ob 2     & bar in Ms: g′2. \\
     & 36    & A        & 4th sixteenth in Ms: f′16 \\
@@ -320,7 +321,7 @@ In general, this edition closely follows the manuscript. Any changes that were i
 This edition has been compiled and checked with utmost diligence. Nevertheless, errors and mistakes cannot be totally excluded. Please report any errors and mistakes to \url{wolfgang@esser-skala.at} or create an issue or pull request on the edition’s GitHub page \url{https://github.com/skafdasschaf/gassmann-requiem}. Your help will be greatly appreciated.
 
 \bigskip
-\textit{Koppl, August 2021\\
+\textit{Koppl, September 2021\\
 Wolfgang Esser-Skala}
 
 \cleardoublepage
