--- a/front_matter/critical_report.tex
+++ b/front_matter/critical_report.tex
@@ -1,339 +1,57 @@
-\documentclass[parskip=full]{scrreprt}
-
-\RedeclareSectionCommand[pagestyle=plain,afterskip=10pt plus 1pt]{chapter}
-\setkomafont{chapter}{\mdseries\headingfont\fontsize{40}{40}\selectfont\color{black!80}}
-\setkomafont{pageheadfoot}{\normalsize}
-
-\def\pnumbox#1{#1\hspace*{8cm}}
-\def\gobble#1{}
-\DeclareTOCStyleEntry[
-  indent=0pt,
-  beforeskip=0pt,
-  entryformat=\itshape,
-  entrynumberformat=\textcolor{oldred},
-  numwidth=2em,
-  linefill=\hfill,
-  pagenumberbox=\pnumbox,
-  pagenumberformat=\itshape
-]{tocline}{part}
-
-\DeclareTOCStyleEntry[
-  indent=0pt,
-  beforeskip=0pt,
-  entrynumberformat=\textcolor{oldred},
-  numwidth=2em,
-  linefill=\hfill,
-  pagenumberbox=\pnumbox
-]{tocline}{section}
-
-\DeclareTOCStyleEntry[
-  indent=0pt,
-  beforeskip=-\parskip,
-  entrynumberformat=\gobble,
-  entryformat=\ltseries,
-  numwidth=2em,
-  linefill=\hfill,
-  pagenumberbox=\pnumbox,
-  pagenumberformat=\ltseries
-]{tocline}{subsection}
-
-
-\usepackage{polyglossia}
-\setdefaultlanguage{english}
-
-
-\usepackage{fontspec}
-\setmainfont{Source Sans Pro}[
-  ItalicFont = Source Sans Pro Italic,
-  BoldFont = Source Sans Pro Bold,
-  BoldItalicFont = Source Sans Pro Bold Italic,
-  FontFace = {lt}{n}{Source Sans Pro Light},
-  FontFace = {lt}{it}{Source Sans Pro Light Italic},
-  FontFace = {sb}{n}{Source Sans Pro Semibold},
-  FontFace = {sb}{it}{Source Sans Pro Semibold Italic},
-  Numbers = Proportional,
-  Ligatures = Common
-]
-\DeclareRobustCommand{\ltseries}{\fontseries{lt}\selectfont}
-\DeclareRobustCommand{\sbseries}{\fontseries{sb}\selectfont}
-\DeclareTextFontCommand{\textlt}{\ltseries}
-\DeclareTextFontCommand{\textsb}{\sbseries}
-\newfontfamily\headingfont{Fredericka the Great}
-
-
-\usepackage[pass]{geometry}
-\newgeometry{twoside,inner=20mm,outer=40mm,top=20mm,bottom=40mm}
-
-
-\usepackage{url}
-\urlstyle{same}
-
-
-\usepackage{microtype}
-\microtypesetup{verbose=silent}
-
-
-\usepackage{booktabs,array,longtable}
-\newcolumntype{L}[1]{%
-  >{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}p{#1}%
-}
-
-
-\usepackage{graphicx}
-
-
-\usepackage{xcolor}
-\definecolor{oldred}{rgb}{.8313,0,0}
-
-
-\usepackage{pdfpages}
-
-
-\usepackage{scrlayer-scrpage}
-\pagestyle{scrheadings}
-\clearscrheadfoot
-\cfoot[\thepage]{\thepage}
-\pagenumbering{roman}
-
-\usepackage{enumitem}
-\setlist[description]{%
-  style=nextline,%
-  leftmargin=2em,%
-  first=\ltseries,%
-  font=\normalfont%
-}
-\def\lyrefitem#1{\item[\lyref{#1}]}
-
-
-\makeatletter
-
-\def\@firstofthree#1#2#3{#1}
-\def\@secondofthree#1#2#3{#2}
-\def\@thirdofthree#1#2#3{#3}
-\def\@firstoffour#1#2#3#4{#1}
-\def\@secondoffour#1#2#3#4{#2}
-\def\@thirdoffour#1#2#3#4{#3}
-\def\@fourthoffour#1#2#3#4{#4}
-\def\Dotfill{\leavevmode\cleaders\hb@xt@ .75em{\hss .\hss }\hfill \kern \z@}
-
-\def\lyrefnumber#1{\expandafter\@setref\csname r@#1\endcsname\@firstofthree{#1}}
-\def\lyreftitle#1{\expandafter\@setref\csname r@#1\endcsname\@secondofthree{#1}}
-\def\lyrefpage#1{\expandafter\@setref\csname r@#1\endcsname\@thirdofthree{#1}}
-
-\def\lyrefgenrenumber#1{\expandafter\@setref\csname r@#1\endcsname\@firstoffour{#1}}
-\def\lyrefgenregenre#1{\expandafter\@setref\csname r@#1\endcsname\@secondoffour{#1}}
-\def\lyrefgenretitle#1{\expandafter\@setref\csname r@#1\endcsname\@thirdoffour{#1}}
-\def\lyrefgenrepage#1{\expandafter\@setref\csname r@#1\endcsname\@fourthoffour{#1}}
-
-\def\lyref#1{%
-  \begingroup%
-  \makebox[0pt][l]{\color{oldred}\lyrefnumber{#1}}\hspace*{2em}%
-  \lyreftitle{#1}\Dotfill\lyrefpage{#1}%
-  \endgroup%
-}
-\def\lyrefpart#1{%
-  \begingroup%
-  \makebox[0pt][l]{\sbseries\color{oldred}\lyrefnumber{#1}}\hspace*{2em}%
-  \makebox[0pt][l]{\sbseries\lyreftitle{#1}}\hspace*{6.5em}%
-  \hfill\sbseries\lyrefpage{#1}%
-  \endgroup%
-}
-\def\lyrefsection#1{%
-  \begingroup%
-  \makebox[0pt][l]{\color{oldred}\lyrefgenrenumber{#1}}\hspace*{2em}%
-  \makebox[0pt][l]{\ltseries\lyrefgenregenre{#1}}\hspace*{6.5em}%
-  \lyrefgenretitle{#1}\Dotfill\lyrefgenrepage{#1}%
-  \endgroup%
-}
-\InputIfFileExists{../tmp/lilypond.ref}{}{\InputIfFileExists{../lilypond.ref}{}{}}
-
-
-\newcommand\fancytitlehead{
-  \headingfont%
-  \fontsize{80}{80}\selectfont%
-  \textcolor{black!80}{%
-    \makebox[0pt][l]{\@ifundefined{@shortname}{\@lastname}{\@shortname}.}%
-  }\\[15pt]%
-  \fontsize{60}{60}\selectfont%
-  \makebox[0pt][l]{\@ifundefined{@shorttitle}{\@title}{\@shorttitle}.}%
-}
-
-
-\def\firstname#1{\def\@firstname{#1}}
-\def\lastname#1{\def\@lastname{#1}}
-\def\shortname#1{\def\@shortname{#1}}
-\def\shorttitle#1{\def\@shorttitle{#1}}
-\def\namesuffix#1{\def\@namesuffix{#1}}
-\def\scoring#1{\def\@scoring{#1}}
-\def\parts#1{\def\@parts{#1}}
-
-\firstname{\relax}
-\lastname{\relax}
-\namesuffix{\relax}
-\scoring{\relax}
-\parts{\relax}
-
-
-\def\maketitle{%
-\begin{titlepage}%
-  \Large%
-  {\@titlehead}%
-  \vfill%
-  {\strut\@firstname}\\%
-  {\sbseries\color{oldred}\strut\@lastname}\\%
-  {\strut\@namesuffix}%
-  \vfill%
-  {\sbseries\@title}\\%
-  {\@subtitle}\\[\baselineskip]%
-  {\itshape\@scoring}%
-  \vfill%
-  {\itshape\@parts}\hspace*{\fill}\raisebox{0pt}[0pt][0pt]{\includegraphics{ees_logo}}%
-\end{titlepage}%
-}
-
-
-\newif\iftemplate\templatetrue
-\newif\ifprintreport\printreportfalse
-\directlua{
-scores = {
-  ob1 = "Oboe I",
-  ob2 = "Oboe II",
-  trb1 = "Trombone I",
-  trb2 = "Trombone II",
-  vl1 = "Violino I",
-  vl2 = "Violino II",
-  vla = "Viola",
-  coro = "Coro",
-  org = "Organo",
-  b = "Bassi",
-  full_score = "Full Score"
-}
-
-last_arg = arg[\string#arg]
-texio.write("Last argument: " .. last_arg)
-if not (scores[last_arg] == nil) then
-  tex.print("\string\\def\string\\lypdfname{" .. last_arg .. "}")
-  tex.print("\string\\parts{" .. scores[last_arg] .. "}")
-  if (last_arg == "full_score") then
-    tex.print("\string\\printreporttrue")
-  end
-end
-}
-
-
-\@ifundefined{lypdfname}{%
-  \templatefalse
-  \printreporttrue
-  \parts{Draft}
-}{\templatetrue}
-
-\makeatother
-
-
+\documentclass{ees}
 
 \begin{document}
-\frenchspacing
 
-\titlehead{\fancytitlehead}
-\firstname{Florian Leopold}
-\lastname{Gassmann}
-\title{Requiem}
-\subtitle{KosG 6\\(F-Pn D-4346)}
-\scoring{S, A, T, B (coro), 2 ob, 2 trb, 2 vl, vla, b, org}
-\maketitle
+\eesTitlePage
 
-
-\thispagestyle{empty}
-
-\vspace*{\fill}
-
-\raisebox{-4mm}{\includegraphics{byncsaeu}}\hspace*{1em}Wolfgang Esser-Skala, 2021
-
-© 2021 by Wolfgang Esser-Skala. This edition is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License. To view a copy of this license, visit \url{http://creativecommons.org/licenses/by-nc-sa/4.0/}.
-
-Music engraving by LilyPond 2.22.0 (\url{http://www.lilypond.org}).\\
-Front matter typeset with Source Sans Pro and Fredericka the Great.
-
-\textit{First version, September 2021}
-
-\vspace*{2cm}
-
-\ifprintreport
-\chapter*{Critical Report}
-
-This edition bases upon a copy in the Bibliothèque nationale de France. The digital version of the manuscript is available at \url{https://gallica.bnf.fr/ark:/12148/btv1b525136899/} (siglum D-4346; see also RISM ID 840016334).
-
-In general, this edition closely follows the manuscript. Any changes that were introduced by the editor are indicated by italic type (lyrics, dynamics and directions), parentheses (expressive marks and bass figures) or dashes (slurs and ties). Accidentals are used according to modern conventions. Asterisks denote changes that are clarified in the detailed remarks below.\footnote{Abbreviations: A, alto; B, bass; b, basses; Ms, manuscript; ob, oboe; org, organ; r, rest; S, soprano; T, tenor; trb,~trombone; vl, violin; vla, viola.}
-
-\bigskip
-
-\begin{longtable}{lll L{10cm}}
-  \toprule
-  \itshape Mov. & \itshape Bar & \itshape Staff & \itshape Note \\
-  \midrule \endhead
-  1 & 39    & vl 2     & 4th quarter in Ms: as′8–g′8 \\
-    & 51    & S        & 5th eighth in Ms: b′16–a′16 \\
-    & 56    & trb 2, T & 3rd eighth in Ms: d′8 \\
-    & 60–62 & trb 1    & bars in Ms: es′4–d′4–c′4–r4, r2–r4–bes′4, and as′2.–g′8–f′8 \\
-    & 91    & vl 1     & 5th eighth in Ms: f′8 \\
-    & 91    & org      & bar in Ms: G2–As4 \\
-    & 114   & A        & 2nd/3rd quarter in Ms: as′2 \\
-    & 122f  & vla      & 5 x es′8 in Ms \\
+\eesCriticalReport{
+  1 & 39    & vl 2     & 4th \quarterNote\ in \B1: \flat a′8–g′8 \\
+    & 51    & S        & 5th \eighthNote\ in \B1: b′16–a′16 \\
+    & 56    & trb 2, T & 3rd \eighthNote\ in \B1: d′8 \\
+    & 60–62 & trb 1    & bars in \B1: \flat e′4–d′4–c′4–\crotchetRest, \halfNoteRest–\crotchetRest–\flat b′4, and \flat a′2.–g′8–f′8 \\
+    & 91    & vl 1     & 5th \eighthNote\ in \B1: f′8 \\
+    & 91    & org      & bar in \B1: G2–\flat A4 \\
+    & 114   & A        & 2nd/3rd \quarterNote\ in \B1: va′2 \\
+    & 122f  & vla      & 5 x \flat e′8 in \B1 \\
   \midrule
-  2 & 7     & trb 2    & 1st note in Ms: c′2 \\
-    & 8     & ob 2     & bar in Ms: g′2. \\
-    & 36    & A        & 4th sixteenth in Ms: f′16 \\
-    & 56    & vla      & bar in Ms: 12 sixteenth \\
-    & 62    & B        & 4th sixteenth in Ms: c16 \\
-    & 75    & A        & 1st half note in Ms: f′2 \\
-    & 77    & vla      & 3rd eighth in Ms: d′8 \\
-    & 119   & vl 1     & 1st quarter in Ms: as′4 \\
-    & 140   & B        & bar in Ms: es1 \\
-    & 170   & vl 2     & 4th quarter in Ms: f′16–f′16–f′16–f′16 \\
-    & 172   & trb 2    & 1st half of bar in Ms: d′2 \\
-    & 176ff & vl 1, 2, vla & In the following bars (measures), three equal sixteenths appear in the Ms: vl 1 – 199 (2nd and 3rd quarter), 219 (1st), 221 (1st), 231 (3rd), 243 (2nd), 250 (1st), and 252 (1st); vl 2 – 196 (3rd quarter), 199 (3rd), 219 (1st), 221 (1st), 231 (3rd), and 251 (1st); vla – 196 (3rd quarter), 250 (1st), and 252 (1st). \\
-    & 194   & org      & 1st eighth in Ms: es8 \\
-    & 195   & S        & last eighth in Ms: d″16–c″16 \\
-    & 200   & trb 1    & 4th quarter in Ms: f′4 \\
-    & 200   & A        & 3rd quarter in Ms: as′4 \\
-    & 200   & trb 2, T & 3rd quarter in Ms: f′4 \\
-    & 213   & vla      & 1st quarter in Ms: c′4 \\
-    & 232   & B        & 1st quarter in Ms: bes4 \\
-    & 242   & T        & 1st half of bar in Ms: bes4–b4 \\
-    & 263   & vla      & 1st sixteenth in Ms: r16 \\
-    & 266   & ob 1     & grace note missing in Ms \\
-    & 266   & A        & grace note missing in Ms \\
-    & 308   & ob 1, 2, vl 1 & 1st half of bar in Ms: des″4–des″4 \\
-    & 361   & T        & 1st note in Ms: as2. \\
-    & 388f  & A        & bars in Ms: c′2–es′2 and es′2–es′2 \\
-    & 388   & trb 2 , T & 1st half note in Ms: f2 \\
-    & 390   & B        & 1st half note in Ms: es2 \\
-    & 391   & ob 1     & 1st half note in Ms: as′2 \\
-    & 417   & ob 1, 2  & bar in Ms: d′4.–es′8–d′4–d′4 \\
-    & 437   & vla      & 1st half of bar in Ms: g4–g4 \\
-    & 498   & ob 1, 2, vl 1 & 1st quarter in Ms: b′8–a′8 \\
-    & 503   & trb 1    & 2nd quarter in Ms: es′4 \\
-    & 506   & vl 2     & 1st half of bar in Ms: as′4–as′4 \\
-  \bottomrule
-\end{longtable}
+  2 & 7     & trb 2    & 1st \halfNote\ in \B1: c′2 \\
+    & 8     & ob 2     & bar in \B1: g′2. \\
+    & 36    & A        & 4th \sixteenthNote\ in \B1: f′16 \\
+    & 56    & vla      & bar in \B1: 12 x \sixteenthNote\ \\
+    & 62    & B        & 4th \sixteenthNote\ in \B1: c16 \\
+    & 75    & A        & 1st \halfNote\ in \B1: f′2 \\
+    & 77    & vla      & 3rd \eighthNote\ in \B1: d′8 \\
+    & 119   & vl 1     & 1st \quarterNote\ in \B1: \flat a′4 \\
+    & 140   & B        & bar in \B1: \flat e1 \\
+    & 170   & vl 2     & 4th \quarterNote\ in \B1: f′16–f′16–f′16–f′16 \\
+    & 172   & trb 2    & 1st \halfNote\ in \B1: d′2 \\
+    & 176ff & vl 1, 2, vla & In the following bars (measures), three equal \sixteenthNote\ appear in \B1: vl 1 – 199 (2nd and 3rd \quarterNote), 219 (1st), 221 (1st), 231 (3rd), 243 (2nd), 250 (1st), and 252 (1st); vl 2 – 196 (3rd \quarterNote), 199 (3rd), 219 (1st), 221 (1st), 231 (3rd), and 251 (1st); vla – 196 (3rd \quarterNote), 250 (1st), and 252 (1st). \\
+    & 194   & org      & 1st \eighthNote\ in \B1: \flat e8 \\
+    & 195   & S        & last \eighthNote\ in \B1: d″16–c″16 \\
+    & 200   & trb 1    & 4th \quarterNote\ in \B1: f′4 \\
+    & 200   & A        & 3rd \quarterNote\ in \B1: \flat a′4 \\
+    & 200   & trb 2, T & 3rd \quarterNote\ in \B1: f′4 \\
+    & 213   & vla      & 1st \quarterNote\ in \B1: c′4 \\
+    & 232   & B        & 1st \quarterNote\ in \B1: \flat b4 \\
+    & 242   & T        & 1st \halfNote\ in \B1: \flat b4–b4 \\
+    & 263   & vla      & 1st \sixteenthNote\ in \B1: \semiquaverRest \\
+    & 266   & ob 1     & grace note missing in \B1 \\
+    & 266   & A        & grace note missing in \B1 \\
+    & 308   & ob 1, 2, vl 1 & 1st \halfNote\ in \B1: \flat d″4–\flat d″4 \\
+    & 361   & T        & 1st note in \B1: \flat a2. \\
+    & 388f  & A        & bars in \B1: c′2–\flat e′2 and \flat e′2–\flat e′2 \\
+    & 388   & trb 2 , T & 1st \halfNote\ in \B1: f2 \\
+    & 390   & B        & 1st \halfNote\ in \B1: \flat e2 \\
+    & 391   & ob 1     & 1st \halfNote\ in \B1: \flat a′2 \\
+    & 417   & ob 1, 2  & bar in \B1: d′4.–\flat e′8–d′4–d′4 \\
+    & 437   & vla      & 1st \halfNote\ in \B1: g4–g4 \\
+    & 498   & ob 1, 2, vl 1 & 1st \quarterNote\ in \B1: b′8–a′8 \\
+    & 503   & trb 1    & 2nd \quarterNote\ in \B1: \flat e′4 \\
+    & 506   & vl 2     & 1st \halfNote\ in \B1: \flat a′4–\flat a′4 \\
+}
 
+\eesToc{}
 
-This edition has been compiled and checked with utmost diligence. Nevertheless, errors and mistakes cannot be totally excluded. Please report any errors and mistakes to \url{wolfgang@esser-skala.at} or create an issue or pull request on the edition’s GitHub page \url{https://github.com/skafdasschaf/gassmann-requiem}. Your help will be greatly appreciated.
-
-\bigskip
-\textit{Koppl, September 2021\\
-Wolfgang Esser-Skala}
-
-\cleardoublepage
-\chapter*{Contents}
-
-\InputIfFileExists{../tmp/lilypond.toc}{}{\InputIfFileExists{../lilypond.toc}{}{}}
-
-\cleardoublepage
-\fi
-
-\iftemplate
-\includepdf[pages=-]{../tmp/\lypdfname.pdf}
-\fi
+\eesScore
 
 \end{document}
